<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Voyage</string>
    <string name="notification_channel">音频服务</string>
    <string name="notification_channel_description">音乐播放通知</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="about_page_open_with">打开方式：</string>
    <string name="about_page_browser">浏览器</string>
    <string name="menu_home">首页</string>
    <string name="menu_gallery">功能</string>
    <string name="hour">小时</string>
    <string name="album_name_all">All Media</string>
    <string name="button_preview">Preview</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_sure_default">Sure</string>
    <string name="button_sure">Sure</string>
    <string name="button_null">""</string>
    <string name="button_complete">Complete</string>
    <string name="folder_count">%1$s(%2$d)</string>
    <string name="picture_size">%1$s M</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="empty_text">No media yet</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
    <string name="error_over_count_of_image">You can only select up to %1$d media of image files</string>
    <string name="error_over_count_of_video">You can only select up to %1$d media of video files</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="error_crop">Crop Failed</string>
    <string name="please_select_media_resource">Please select media resource</string>
    <string name="empty_album">album is empty</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="ucrop_gif_tag">gif</string>
    <string name="error_under_quality">Under quality</string>
    <string name="error_over_quality">Over quality</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_retry"> 重    试 </string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="minute">分钟</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="zen_mode_desc">Help you stay away from mobile phones and enjoy life.</string>
    <string name="not_downloaded">未下载</string>
    <string name="click_to_play">点击播放</string>
    <string name="merge">合并</string>
    <string name="waiting">等待中</string>
    <string name="downloading">下载中…</string>
    <string name="enter_source_file_path">请输入源文件路径</string>
    <string name="enter_origin_document">请输入原文件</string>
    <string name="enter_target_file_path">请输入目标文件路径</string>
    <string name="output_target_file">请输出目标文件</string>
    <string name="change_format">转变封装格式</string>
    <string name="download_m3u8_file">已下载M3U8文件</string>
    <string name="download_setting">下载设置</string>
    <string name="qr_code_scan">二维码扫描</string>
    <string name="normal_download">普通下载</string>
    <string name="m3u8_to_mp4">合并M3U8为MP4</string>
    <string name="pause_all_download_task">暂停所有下载任务</string>
    <string name="resume_all_download_task">恢复所有下载任务</string>
    <string name="storage_location">存储位置</string>
    <string name="cache_file_size">缓存文件大小</string>
    <string name="clear_cache">清理缓存</string>
    <string name="open_storage_directory">打开存储目录</string>
    <string name="maximum_concurrent_number">最大并发数</string>
    <string name="merge_ts_after_download">下载完成是否合并ts分片</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ignore_certificate">是否忽略证书</string>
    <string name="pause_download_on_mobile_network">Whether to pause the download under the mobile network</string>
    <string name="convert_progress">已经转换的进度: %s\%</string>
    <string name="download_paused_downloaded_size">下载暂停, 已下载=%s</string>
    <string name="download_completed_total_size">下载完成, 总大小=%s</string>
    <string name="download_error">下载错误</string>
    <string name="progress_speed_downloaded">Progress: %s, Speed: %s, Downloaded: %s</string>
    <string name="progress">进度:%s</string>
    <string name="splash_ad_unit_id">ca-app-pub-9790396069038412/2740392299</string>
    <string name="checker_ab_supported_supporting_text">Your device includes support for seamless system updates and the AB system partition exists.</string>
    <string name="checker_ab_supported_virtual_supporting_text">Your device includes support for a new version of Seamless System Update and a virtual A B system partition exists. The virtual AB partition can be freely resized as needed.</string>
    <string name="checker_cpu_architecture_known_supporting_text">Your device uses a CPU based on the %1s architecture.</string>
    <string name="checker_cpu_architecture_arm32_subtitle">32-bit ARM</string>
    <string name="checker_cpu_architecture_arm32_binder64_subtitle" translatable="false">32-bit ARM &#8212; 64-bit Binder</string>
    <string name="checker_cpu_architecture_arm64_subtitle" translatable="false">64-bit ARM</string>
    <string name="checker_cpu_architecture_x86_subtitle" translatable="false">x86</string>
    <string name="checker_cpu_architecture_x86_64_subtitle" translatable="false">64-bit x86</string>
    <string name="other">其他功能</string>
    <string name="menu_resources">Resource Library</string>
    <string name="pages">Pages</string>
    <string name="check_update">Check for updates</string>
    <string name="alipay">Alipay donation</string>
    <string name="my_account">我的</string>
    <string name="join_us">Join us</string>
    <string name="telegram">Telegram</string>
    <string name="qq">QQ</string>
    <string name="qq_guild">QQ Guild</string>
    <string name="welcome_to">Welcome to</string>
    <string name="get_start">Get Start</string>
    <string name="exit_voyage">Exit Voyage</string>
    <string name="coutinue_action">使用本软件你需要进行以下操作:</string>
    <string name="read_write_data_store">阅读《隐私政策》与《用户协议》</string>
    <string name="get_permission">相关权限申请</string>
    <string name="input_freq">请输入频率</string>
    <string name="input_amplitude">请输入振幅</string>
    <string name="default_one_thousand">1000</string>
    <string name="play">Play</string>
    <string name="default_one_million">10000</string>
    <string name="stop">Stop</string>
    <string name="input_site_name">Please Input Website Name</string>
    <string name="input_site_description">Please Input Website Description</string>
    <string name="support_markdown">Support Markdown</string>
    <string name="input_site_preview_image">Please Website Preview Image</string>
    <string name="optional">Optional</string>
    <string name="input_site_url">Please Website Url</string>
    <string name="add">Add</string>
    <string name="menu_favorite">Favorite</string>
</resources>