<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/pages">
        <menu>
            <item
                android:id="@+id/nav_homes"
                android:checkable="true"
                android:icon="@drawable/home_round"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_functions"
                android:checkable="true"
                android:icon="@drawable/widgets_material"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_resources"
                android:checkable="true"
                android:icon="@drawable/inbox_material"
                android:title="@string/menu_resources" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/joinGroup"
                android:icon="@drawable/account_multiple_plus_outline"
                android:title="@string/join_us" />
            <item
                android:id="@+id/check_update"
                android:icon="@drawable/ic_update"
                android:title="@string/check_update" />
            <item
                android:id="@+id/alipay"
                android:icon="@drawable/zfb_icon"
                android:title="@string/alipay" />
        </menu>
    </item>

</menu>