<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/functions"
        android:enabled="true"
        android:icon="@drawable/outline_widgets_24"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/resources"
        android:enabled="true"
        android:icon="@drawable/outline_inbox_24"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/my_account" />
</menu>