<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appbar"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
            android:id="@id/ctl"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:collapsedSubtitleTextAppearance="@style/TextAppearance.SubTitle.YuanHang2"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Title.YuanHang"
            app:expandedTitleMargin="@dimen/dp_20"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|snapMargins"
            app:titleCollapseMode="scale"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.Material3.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_64"
                android:background="@android:color/transparent"
                android:clipToPadding="false"
                android:elevation="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/dp_8"
                app:buttonGravity="center_vertical"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="?android:attr/textColorPrimary" />
        </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16mdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_site_name"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_image_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8mdp"
            android:animateLayoutChanges="true"
            app:helperText="@string/optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_site_preview_image"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_url_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8mdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_site_url"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_description_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8mdp"
            android:animateLayoutChanges="true"
            app:helperText="@string/support_markdown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/input_site_description"
                android:inputType="text|textMultiLine"
                android:maxLines="5"
                android:minLines="5" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8mdp"
            android:text="@string/add" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
