<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16mdp">

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="?android:attr/textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8mdp"
        android:orientation="vertical">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4mdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/telegram"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telegram"
                app:icon="@drawable/telegram" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/qq"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4mdp"
                android:text="@string/qq"
                app:icon="@drawable/qq" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/qq_guild"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4mdp"
                android:text="@string/qq_guild"
                app:icon="@drawable/pound" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/wechat"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4mdp"
                android:text="WeChat"
                android:visibility="gone"
                app:icon="@drawable/wechat" />

        </com.google.android.flexbox.FlexboxLayout>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>